---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i16, i16, i32 }

@prg_instance = global %prg_interface { i16 0, i16 1, i32 2 }

define void @prg(%prg_interface* %0) {
entry:
  %y = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %z = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 1
  %zz = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 2
  ret void
}

